Ensure the avatar is not squished when editing

--- a/src/blocks/author/styles/style.scss
+++ b/src/blocks/author/styles/style.scss
@@ -24,6 +24,7 @@
 		}
 	}
 
+	.block-editor__container &__avatar-img,
 	&__avatar-img {
 		border-radius: 100%;
 		display: inline-block;
